# octusbridge-relay

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.local  LICENSE  README.md  build.rs  deb.Dockerfile  entrypoint.sh  log4rs.yaml  logs.json  test.sqlite
.github/workflows/: master.yml
client/: Cargo.toml
client/src/: main.rs
contrib/: config.yaml  relay.docker.service  relay.native.service
debian/: postinst  prerm  service
debian/scripts/: preinstall  prerm
docs/: CONFIGURATION.md  CONTRACTS.md  DOCKER.md  OVERVIEW.md  README.md
enigma/: Cargo.toml
enigma/src/: enigma.rs  lib.rs
migrations/: 20210806140320_eth.sql  V1__initial.sql
relay-eth/: Cargo.toml
relay-eth/abi/: contracts_DistributedOwnable_sol_DistributedOwnable.json
relay-eth/src/: lib.rs  ws.rs
relay-models/: Cargo.toml
relay-models/src/: models.rs
relay-ton/: Cargo.toml
relay-ton/abi/: Bridge.abi.json  BridgeConfigurationUpdate.abi.json  EthEvent.abi.json  EthEventConfiguration.abi.json  EthereumEvent.abi.json  EthereumEventConfiguration.abi.json  Relay.abi.json  TonEvent.abi.json  TonEventConfiguration.abi.json
relay-ton/src/: lib.rs  main.rs  prelude.rs
relay-ton/src/contracts/: bridge.rs  contract.rs  errors.rs  message_builder.rs  mod.rs  models.rs  prelude.rs  utils.rs
relay-ton/src/contracts/bridge/: mod.rs  models.rs
relay-ton/src/contracts/bridge_configuration_update/: mod.rs
relay-ton/src/contracts/eth_event/: mod.rs
relay-ton/src/contracts/eth_event_configuration/: mod.rs
relay-ton/src/contracts/ethereum_event/: mod.rs
relay-ton/src/contracts/ethereum_event_configuration/: mod.rs
relay-ton/src/contracts/relay_contract/: mod.rs
relay-ton/src/contracts/ton_event/: mod.rs
relay-ton/src/contracts/ton_event_configuration/: mod.rs
relay-ton/src/contracts/ton_swapback_contract/: mod.rs
relay-ton/src/contracts/ton_swapback_events/: mod.rs
relay-ton/src/contracts/voting_for_add_event_type/: mod.rs
relay-ton/src/contracts/voting_for_remove_event_type/: mod.rs
relay-ton/src/contracts/voting_for_update_config/: mod.rs
relay-ton/src/models/: mod.rs
relay-ton/src/transport/: errors.rs  graphql_transport.rs  mod.rs  tonlib_transport.rs  tvm.rs  utils.rs
relay-ton/src/transport/graphql_transport/: config.rs  indexer.rs  mod.rs  mutation_send_message.graphql  node_client.rs  query_account_state.graphql  query_account_transactions.graphql  query_block.graphql  query_block_after_split.graphql  query_latest_masterchain_block.graphql  query_next_block.graphql  query_next_masterchain_block.graphql  query_node_se_conditions.graphql  query_node_se_latest_block.graphql  query_outbound_messages.graphql  query_outbound_messages_full.graphql  schema.graphql  subscription.rs
relay-ton/src/transport/tonlib_transport/: config.rs  mod.rs  tvm.rs
relay-utils/: Cargo.toml
relay-utils/src/: exporter.rs  lib.rs
scripts/: build_deb.sh  check.py  codegen.py  entrypoint.sh  export.sh  generate.sh  init.py  setup.sh  unlock.py  update.sh
src/: config.rs  engine.rs  key_management.rs  key_managment.rs  lib.rs  main.rs  models.rs  prelude.rs  storage.rs
src/config/: btc_config.rs  eth_config.rs  mod.rs  sol_config.rs  stored_keys.rs  temp_keys.rs  verification_state.rs
src/crypto/: bip_derive.rs  key_managment.rs  mod.rs  recovery.rs
src/db/: constants.rs  migrate.rs  mod.rs
src/db/eth_queue/: mod.rs
src/db/stats_db/: mod.rs
src/db/verification_queue/: migrations.rs  mod.rs
src/db/votes_queues/: mod.rs
src/db_management/: constants.rs  mod.rs  models.rs  prelude.rs
src/db_management/eth_queue/: mod.rs
src/db_management/stats_db/: mod.rs
src/db_management/ton_queue/: mod.rs
src/db_management/votes_queues/: mod.rs
src/db_managment/: constants.rs  eth_queue.rs  mod.rs  models.rs  prelude.rs  stats.rs  ton_db.rs  ton_event_db.rs  tx_monitor.rs
src/db_managment/eth_queue/: mod.rs
src/db_managment/stats_db/: mod.rs
src/db_managment/ton_queue/: mod.rs
src/engine/: bridge.rs  handle_panic.rs  mod.rs  models.rs  routes.rs
src/engine/api/: docs.rs  mod.rs
src/engine/bridge/: eth_events_handler.rs  event_configurations_listener.rs  event_transport.rs  event_votes_listener.rs  mod.rs  models.rs  persistent_state.rs  prelude.rs  semaphore.rs  ton_config_listener.rs  ton_listener.rs  transactions_monitoring.rs  util.rs  utils.rs
src/engine/btc_subscriber/: mod.rs  tracker.rs
src/engine/eth_subscriber/: StakingRelayVerifier.abi  StakingRelayVerifier.sol  contracts.rs  eth_config.rs  mod.rs  models.rs  utils.rs
src/engine/exporter/: mod.rs
src/engine/keystore/: mod.rs  protected_region.rs
src/engine/metrics_exporter/: mod.rs
src/engine/routes/: api.rs  mod.rs  status.rs
src/engine/sol_subscriber/: mod.rs
src/engine/staking/: mod.rs
src/engine/state/: eth_state.rs  mod.rs
src/engine/ton_contracts/: base_event_configuration_contract.rs  base_event_contract.rs  bridge_contract.rs  btc_deposit_contract.rs  btc_proxy_contract.rs  btc_ton_event_configuration_contract.rs  btc_ton_event_contract.rs  connector_contract.rs  elections_contract.rs  eth_event_contract.rs  (+21 more)
src/state/: eth_state.rs  mod.rs  models.rs
src/storage/: mod.rs  tables.rs
src/utils/: abi_mapping.rs  db_pool.rs  eth_address.rs  existing_contract.rs  memory_cache.rs  mod.rs  pending_messages_cache.rs  pending_messages_queue.rs  retry.rs  serde_helpers.rs  shard_utils.rs  solana_helper.rs  topic_hash.rs  tristate.rs  tx_context.rs
test/: test.keys
ton-contracts/: Cargo.toml
ton-contracts/abi/: Bridge.abi.json  Connector.abi.json  EthereumEvent.abi.json  EthereumEventConfiguration.abi.json  RelayRound.abi.json  TonEvent.abi.json  TonEventConfiguration.abi.json
ton-contracts/src/: lib.rs  models.rs
ton-contracts/src/bridge/: mod.rs
ton-contracts/src/connector/: mod.rs
ton-contracts/src/ethereum_event/: mod.rs
ton-contracts/src/ethereum_event_configuration/: mod.rs
ton-contracts/src/relay_round/: mod.rs
ton-contracts/src/ton_event/: mod.rs
ton-contracts/src/ton_event_configuration/: mod.rs
util/: Cargo.toml
util/src/: lib.rs
(+26 files in other folders)
