[package]
name = "client"
version = "0.1.0"
authors = ["vladimir"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
dialoguer = "0.7.1"
structopt = "0.3.20"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.33"
serde_json = "1.0.59"
chrono = "0.4.19"
relay-models = { path = "../relay-models" }
