[package]
name = "client"
version = "0.1.0"
authors = ["vladimir"]
edition = "2018"

[dependencies]
# Local dependencies
relay-models = { path = "../relay-models" }

# General dependencies
anyhow = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.2"
dialoguer = "0.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
