[package]
name = "relay-eth"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
url = "2.1.1"
web3 = { git = "https://github.com/tomusdrw/rust-web3", features = ["http-tls"], rev = "2c33873488cbf9a27bf38d665138b227521bf51a" }
log = "0.4.11"
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.8.1"
sha3 = "0.9.1"
anyhow = "1.0.33"
futures = "0.3.6"
num256 = "0.3.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

sled = "0.34.5"