[package]
name = "relay-eth"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
url = "2.1.1"
web3 = { git = "https://github.com/tomusdrw/rust-web3", features = ["http-tls"], rev = "2bcd2db8633612a21ff84e4174bd1b6a5105b539" }
log = "0.4.11"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.33"
futures = "0.3.6"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sled = "0.34.5"
sha3 = "0.9.1"
ethabi = "13.0.0"