[package]
name = "relay-eth"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
url = "2.1.1"
web3 = { version = "0.16.0", default-features = false, features = ["http-tls"] }
log = "0.4.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.6"
anyhow = "1.0.33"
futures = "0.3.6"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sled = "0.34.5"
sha3 = "0.9.1"
ethabi = "14.0.0"
