[package]
name = "relay-models"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opg ="0.0.30"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"