[package]
name = "relay-ton"
version = "0.1.2"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
relay-utils = { path = "../relay-utils" }

anyhow = "1.0.33"
async-trait = "0.1"
base64 = "0.13"
borsh = "0.9"
chrono = "0.4"
graphql_client = { version = "0.9.0", optional = true }
hex = "0.4.2"
log = "0.4.11"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
ed25519-dalek = "1.0.1"
failure = "0.1.8"
futures = "0.3.6"
num-bigint = { version = "0.2", features = ["serde"] }
num-traits = "0.2.14"
once_cell = "1.5.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sled = "0.34.6"
primitive-types = "0.9.0"
tokio-stream = "0.1.5"

ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi", rev = "a2b2a9dc2e8c30a070e9af79cf0c24a55bdd5a87" }
ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git", default-features = false }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
tonlib = { git = "https://github.com/broxus/tonlib-rs.git", optional = true }

# Nekoton SDK
nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["derive"] }

[features]
default = ["graphql-transport"]
tonlib-transport = ["tonlib"]
graphql-transport = ["graphql_client"]
