[package]
name = "relay-utils"
version = "0.1.1"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
humantime = "2.1"
hyper = "0.14.7"
http = "0.2"
futures = "0.3.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_yaml = "0.8"
