[package]
name = "ton-contracts"
version = "2.0.0"
edition = "2018"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }

# TON specific dependencies
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

# Nekoton SDK
nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["derive"] }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
